<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical"
    android:weightSum="10" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1.5"
        android:background="#3d7cce"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <Button
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/arrow_white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/settings"
            android:textColor="#ffffff"
            android:textSize="18dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8.5"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="30dp"
            android:text="@string/search_radius"
            android:textColor="#665e5c"
            android:textSize="18dp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="20dp"
            android:weightSum="6"
            android:orientation="horizontal" >

            <TextView
             
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="5Km"
                android:gravity="center"
                android:textColor="#665e5c"
                android:textSize="11dp" />
            
             <TextView
               
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="10Km"
                android:gravity="center"
                android:textColor="#665e5c"
                android:textSize="11dp" />
             
              <TextView
               
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="20Km"
                android:gravity="center"
                android:textColor="#665e5c"
                android:textSize="11dp" />
              
               <TextView
               
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="30Km"
                android:gravity="center"
                android:textColor="#665e5c"
                android:textSize="11dp" />
               
                <TextView
               
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="40Km"
                android:gravity="center"
                android:textColor="#665e5c"
                android:textSize="11dp" />
                
                 <TextView
                
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="all"
                android:gravity="center"
                android:textColor="#665e5c"
                android:textSize="11dp" />
        </LinearLayout>

        <SeekBar
            android:id="@+id/seekBar1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
           
            android:max="50" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="45dp"
            android:layout_marginTop="20dp"
            android:text="@string/language"
            android:textColor="#665e5c"
            android:textSize="18dp"
            android:textStyle="bold" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp" >

            <RadioGroup
                android:id="@+id/shre_mode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="45dp"
                android:layout_marginRight="45dp"
                android:orientation="vertical" >

                <RadioButton
                    android:id="@+id/radioButton1"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="#f4f4f4"
                   
                    android:text="@string/deutsch"
                    android:textColor="#665e5c" />

                <RadioButton
                    android:id="@+id/radioButton2"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="#f4f4f4"
                    
                    android:text="@string/english"
                    android:textColor="#665e5c" />

                <RadioButton
                    android:id="@+id/radioButton3"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="#f4f4f4"
                    android:text="@string/francais"
                    android:textColor="#665e5c" />

                <RadioButton
                    android:id="@+id/radioButton4"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="#f4f4f4"
                    android:text="@string/italiano"
                    android:textColor="#665e5c" />
            </RadioGroup>
        </ScrollView>
    </LinearLayout>

</LinearLayout>